--- a/Client/src/components/Header/header.module.css
+++ b/Client/src/components/Header/header.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #007bff;
+  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); 
   color: white;
   padding: 20px 0;
   text-align: center;
